# lightning-trainer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  download_data.py  main.py  pyproject.toml
lightning_trainer/: __init__.py  data.py  model.py  train.py
scripts/: benchmark_lightning_throughput.py  download_data.py  prepare_tensor_cache.py  profile_run.py
tests/: test_cli.py  test_config.py  test_data.py  test_environment.py  test_lightning_trainer.py  test_resume.py  test_train.py  test_trainer.py
tiny_imagenet_trainer/: __init__.py  checkpointing.py  cli.py  config.py  data.py  environment.py  modeling.py  train.py  trainer.py
tiny_imagenet_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
