[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-imagenet-trainer"
version = "0.1.0"
description = "A minimal, beginner-friendly Tiny-ImageNet training demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.6",
  "torchvision>=0.21",
  "pillow>=10.0",
  "triton-windows==3.2.0.post21",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]
log = [
    "tensorboard>=2.16.0",
    "wandb>=0.16.0",
]

[project.scripts]
tiny-imagenet-train = "tiny_imagenet_trainer.train:main"

[tool.setuptools.packages.find]
include = ["tiny_imagenet_trainer*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
