[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning-trainer"
version = "0.1.0"
description = "Minimal PyTorch Lightning trainer for Tiny-ImageNet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "torchvision",
  "pillow>=10.0",
  "triton-windows==3.6.0.post26; sys_platform == 'win32'",
  "pytorch-lightning>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3.0", "datasets>=4.8.4", "pillow>=12.2.0"]

[project.scripts]
train = "lightning_trainer.train:main"

[tool.setuptools.packages.find]
include = ["lightning_trainer*"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:GPU available but not used.*:UserWarning",
  "ignore:.*treespec.*LeafSpec.*deprecated.*:DeprecationWarning",
  "ignore:.*treespec.*LeafSpec.*deprecated.*:FutureWarning",
  "ignore:.*pin_memory.*no accelerator.*:UserWarning",
  "ignore:The 'val_dataloader' does not have many workers:UserWarning",
  "ignore:The 'train_dataloader' does not have many workers:UserWarning",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
